# balance_control

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  temp_before_proto_0006.txt  temp_debug_engine_full.ts  temp_prev_engine.ts  temp_segment.txt  temp_view.txt  tsconfig.base.json
apps/client/: index.html  package.json  tsconfig.json  vite.config.ts
apps/client/src/: App.test.tsx  (+3 more)
apps/server/: package.json  tsconfig.json
docs/: 000-alle-regeln.md  001-grundregeln.md  003-expansion-01_wirtschaft_arbeit.md  004-expansion-02_sicherheit_ordnung.md  AGENTS.md  TASK_sim_py.md  balance_control_komplette_icon_ubersicht_material_symbols_sharp.md
docs/rules/: 001-grundregeln.md  002-5_6_erweiterung.md  005-expansion-03_klima_zukunft.md  (+1 more)
scripts/: debug-exp-test.mjs  depth.js  depth.mjs
sim_py/: README.md  __init__.py  pyproject.toml
sim_py/agents/: heuristic_institution.py  heuristic_network.py  heuristic_production.py  llm_agent.py  random_legal.py
sim_py/docs/: ASSUMPTIONS.md  METRICS.md
sim_py/engine/: __init__.py  actions.py  apply.py  errors.py  legal.py  resolver.py  rng.py  rules_base.py  rules_expansion_01_economy.py  rules_expansion_02_order.py  ruleset.py  scoring.py  state.py  tiles.py  types.py
sim_py/sim/: cli.py  export.py  metrics.py  runner.py  tournament.py
sim_py/tests/: test_determinism.py  test_expansion_01.py  test_expansion_02.py  test_legal_actions.py  test_metrics_series.py  test_resolver.py  test_smoke.py
tests/: test_determinism.py  test_legal_actions.py  test_resolver.py  test_smoke.py
(+23 files in other folders)
