[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balance-control-sim"
version = "0.1.0"
description = "Deterministic BALANCE // CONTROL simulation engine and tournament harness"
readme = "README.md"
authors = [{ name = "Balance // Control" }]
license = { text = "Proprietary" }
requires-python = ">=3.11"
keywords = ["simulation", "determinism", "boardgame", "llm", "tournament"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest>=7"]
metrics = ["numpy>=1.26; python_version>='3.11'", "pandas>=2; python_version>='3.11'"]

[project.scripts]
balance-control-sim = "sim_py.sim.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sim_py*"]
