[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balance-control-sim"
version = "0.1.0"
description = "Deterministic BALANCE // CONTROL simulation engine and tournament harness"
readme = "README.md"
authors = [{ name = "Balance // Control" }]
license = { text = "Proprietary" }
requires-python = ">=3.11"

[project.scripts]
balance-control-sim = "sim_py.sim.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sim_py*"]
